--- a/MFAX01V3/packages.config
+++ b/MFAX01V3/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Fody" version="3.3.2" targetFramework="net47" developmentDependency="true" />
+  <package id="MaterialDesignColors" version="1.1.1" targetFramework="net47" />
+  <package id="MaterialDesignThemes" version="2.5.0.1205" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net47" />
+  <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net47" />
 </packages>
