--- a/MFAX01V3/MFAX01V3.csproj
+++ b/MFAX01V3/MFAX01V3.csproj
@@ -51,6 +51,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -69,14 +71,33 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\CustomGridPanel.cs" />
+    <Compile Include="ValueConventers\ConvertClass.cs" />
     <Compile Include="ViewModels\Base\BaseViewModel.cs" />
     <Compile Include="ViewModels\Base\IHavePassword.cs" />
     <Compile Include="ViewModels\Base\RelayCommand.cs" />
     <Compile Include="ViewModels\Base\RelayParameterizedCommand.cs" />
+    <Compile Include="ViewModels\InBoxViewModel.cs" />
     <Compile Include="ViewModels\LoginViewmodel.cs" />
+    <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\OutboxViewmodel.cs" />
+    <Compile Include="ViewModels\SentBoxViewModel.cs" />
+    <Compile Include="Views\Inbox.xaml.cs">
+      <DependentUpon>Inbox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Outbox.xaml.cs">
+      <DependentUpon>Outbox.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Sentbox.xaml.cs">
+      <DependentUpon>Sentbox.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Views\Inbox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -90,6 +111,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\Login.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Outbox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Sentbox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -128,11 +157,53 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="images\" />
-    <Folder Include="ValueConventers\" />
+    <COMReference Include="FAXCOMEXLib">
+      <Guid>{2BF34C1A-8CAC-419F-8547-32FDF6505DB8}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="FAXCOMLib">
+      <Guid>{87099223-C7AF-11D0-B225-00C04FB6C2F5}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </COMReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="FodyWeavers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\mail-inbox.png" />
+    <Resource Include="images\mail-outbox.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\newFax.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\newScan.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\dinhkem.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\contactBook.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\Mail-Failed.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\denied-icon.png" />
+    <Resource Include="images\Ok-icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\warning-xxl.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.3.3.2\build\Fody.targets" Condition="Exists('..\packages\Fody.3.3.2\build\Fody.targets')" />
