--- a/MFAX01V3/MFAX01V3.csproj
+++ b/MFAX01V3/MFAX01V3.csproj
@@ -71,12 +71,23 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Common\Helpper.cs" />
     <Compile Include="Controls\CustomGridPanel.cs" />
+    <Compile Include="Controls\MultiSelectTextBox.xaml.cs">
+      <DependentUpon>MultiSelectTextBox.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\UcTimKiemThu.xaml.cs">
+      <DependentUpon>UcTimKiemThu.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Services\Helpers.cs" />
+    <Compile Include="Services\HighlightedTextBlock.cs" />
+    <Compile Include="ValueConventers\BoolToVisibilityConverter.cs" />
     <Compile Include="ValueConventers\ConvertClass.cs" />
     <Compile Include="ViewModels\Base\BaseViewModel.cs" />
     <Compile Include="ViewModels\Base\IHavePassword.cs" />
     <Compile Include="ViewModels\Base\RelayCommand.cs" />
     <Compile Include="ViewModels\Base\RelayParameterizedCommand.cs" />
+    <Compile Include="ViewModels\Base\TransferModels.cs" />
     <Compile Include="ViewModels\InBoxViewModel.cs" />
     <Compile Include="ViewModels\LoginViewmodel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
@@ -94,6 +105,17 @@
     <Compile Include="Views\Sentbox.xaml.cs">
       <DependentUpon>Sentbox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\wndSendFax.xaml.cs">
+      <DependentUpon>wndSendFax.xaml</DependentUpon>
+    </Compile>
+    <Page Include="Controls\MultiSelectTextBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\UcTimKiemThu.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\Inbox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -119,6 +141,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Sentbox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\wndSendFax.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -204,6 +230,24 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="images\warning-xxl.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\delete.gif" />
+    <Content Include="Rings\busy.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Rings\ding.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Rings\NOTIFY.WAV">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Rings\ringin.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.3.3.2\build\Fody.targets" Condition="Exists('..\packages\Fody.3.3.2\build\Fody.targets')" />
