--- a/MFAX01V3/MFAX01V3.csproj
+++ b/MFAX01V3/MFAX01V3.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Controls\UcTimKiemThu.xaml.cs">
       <DependentUpon>UcTimKiemThu.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\DanhBa.cs" />
+    <Compile Include="Models\PhoneType.cs" />
     <Compile Include="Services\Helpers.cs" />
     <Compile Include="Services\HighlightedTextBlock.cs" />
     <Compile Include="ValueConventers\BoolToVisibilityConverter.cs" />
@@ -104,6 +106,9 @@
     </Compile>
     <Compile Include="Views\Sentbox.xaml.cs">
       <DependentUpon>Sentbox.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\wndDanhBa.xaml.cs">
+      <DependentUpon>wndDanhBa.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\wndSendFax.xaml.cs">
       <DependentUpon>wndSendFax.xaml</DependentUpon>
@@ -141,6 +146,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Sentbox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\wndDanhBa.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -233,6 +242,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="images\delete.gif" />
+    <None Include="DanhBas.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="Rings\busy.wav">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -246,9 +258,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.3.3.2\build\Fody.targets" Condition="Exists('..\packages\Fody.3.3.2\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
